# avon

./: .devenv.flake.nix  .gitignore  CONTRIBUTING.md  Justfile  README.md  devenv.nix  mise.toml  package.json  pyproject.toml
backend/: .dockerignore  .env  .env.test  .gitignore  Dockerfile  Justfile  build.gradle  docker-compose.yaml  pyproject.toml  settings.gradle
backend/app/: main.py  provision_worker.py  sqs_worker.py
backend/app/cli/: manage.py
backend/app/core/: env.py  gitlab.py  jwt_utils.py  logging.py  security.py  settings.py  terminal.py  testing.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base_image.py  colour.py  coursework  coursework.py  coursework_enrollment.py  notification.py  programme.py  projects.py  security.py  student_repo.py  test_run.py  unit.py  unit_enrollement.py  unit_enrollment.py  unit_group.py  unit_group_member.py  user.py  user_group_member.py
backend/app/notifications/: notification.py
backend/app/routers/: analytics.py  auth.py  base_image.py  check.py  coursework.py  coursework_enrollment.py  me.py  notification.py  programme.py  project.py  projects.py  seeding.py  structure.py  testing_fixtures.py  unit.py  unit_enrollment.py  user.py  websocket.py
backend/app/schemas/: base_image.py  coursework.py  login.py  notification.py  profile_image.py  programme.py  project.py  security.py  structure.py  test_run.py  unit.py  unit_enrollment.py  user.py  websocket.py
backend/app/services/: db_reset.py  student_enrollment.py
backend/sql/: seed.sql
backend/tests/: conftest.py  test_provision_worker.py  test_sqs_worker.py
backend/tests/cli/: test_manage.py
backend/tests/core/: test_academic_year.py  test_env.py  test_jwt_utils.py  test_logging.py  test_testing.py
backend/tests/helpers/: factories.py  identities.py
backend/tests/model/: __init__.py  conftest.py  test_coursework_model.py  test_notification_model.py  test_programme_model.py  test_unit_enrollment_model.py  test_unit_group_model.py  test_unit_model.py
backend/tests/notifications/: test_notification_writer.py
backend/tests/router/: conftest.py  test_analytics_router.py  test_base_image_router.py  test_check_router.py  test_conftest.py  test_coursework_direct.py  test_coursework_router.py  test_me_router.py  test_notification_router.py  test_notification_router_direct.py  test_programme_router.py  (+7 more)
(+774 files in other folders)
