[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<5",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
